# panelyt

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  mutation-baseline.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025001010001_initial.py  2025001010002_add_biomarker_aliases.py  2025001010003_add_defaults_for_alias_type_and_fetched_at.py  2025001010004_add_user_accounts_and_saved_lists.py  2025001010005_add_username_password_to_user_accounts.py  2025001010006_make_user_credentials_optional.py  2025001010007_add_biomarker_list_templates.py  2025001010008_add_admin_flag_and_template_admin.py  2025001010009_add_telegram_notifications.py  2025001010010_enable_alerts_by_default.py  2025001010011_add_multi_lab_support.py  2025001010012_add_performance_indexes.py  2025001010013_add_snapshot_date_index.py  2026010200001_add_app_settings.py  2026010300001_add_item_biomarker_index.py  2026010900001_drop_lab_schema.py  2026010900002_cleanup_diag_data.py  2026010900003_enforce_biomarker_slug_not_null.py  2026011200001_add_institutions_and_offers.py  2026011600001_localize_template_fields.py  2026011800001_add_user_language_code.py
apps/api/data/: core_aliases.json  diag_synthetic_packages.json
apps/api/scripts/: compile_biomarkers.py  entrypoint.sh  generate_complete_aliases.py  import_aliases.py  mutation_report.py  purge_unknown_biomarkers.py  run_ingestion.py
apps/api/src/panelyt_api/: main.py
apps/api/src/panelyt_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/panelyt_api/api/: account.py  biomarker_lists.py  catalog.py  deps.py  health.py  institutions.py  optimize.py  router.py  saved_lists.py  telegram.py  users.py
apps/api/src/panelyt_api/core/: cache.py  diag.py  metrics.py  settings.py
apps/api/src/panelyt_api/db/: __init__.py  base.py  metadata.py  models.py  session.py
apps/api/src/panelyt_api/ingest/: client.py  repository.py  scheduler.py  service.py  types.py
apps/api/src/panelyt_api/matching/: __init__.py  biomarkers.yaml  config.py  loader.py  suggest.py
apps/api/src/panelyt_api/middleware/: __init__.py  request_id.py
apps/api/src/panelyt_api/optimization/: addons.py  biomarkers.py  candidate_collector.py  candidates.py  context.py  (+6 more)
apps/api/tests/: __init__.py  conftest.py  factories.py  test_account_settings_endpoints.py  test_account_settings_institutions.py  test_api_endpoints.py  test_auth_endpoints.py  test_biomarker_lists_endpoints.py  test_biomarker_resolver.py  test_cache.py  test_cache_isolation.py  test_ci_artifacts.py  test_coverage_config.py  test_db_imports.py  test_db_isolation.py  test_db_session.py  test_factories.py  test_freshness_cache.py  test_ingest_client.py  test_ingestion_e2e.py  test_ingestion_repository.py  test_ingestion_service.py  test_institutions_endpoints.py  test_matching.py  test_metrics.py  test_migration_add_institutions_and_offers.py  test_migration_add_multi_lab_support.py  test_migration_cleanup_diag_data.py  test_migration_enforce_biomarker_slug_not_null.py  test_models.py  test_openapi_fuzz.py  test_openapi_snapshot.py  test_optimization.py  test_optimization_addons.py  test_optimization_golden.py  test_optimization_response_builder.py  test_optimization_service.py  test_optimization_solver_utils.py  test_price_alerts.py  test_random_order.py  (+11 more)
apps/api/tests/integration/: conftest.py  test_migrations_smoke.py  test_postgres_queries.py
apps/api/tests/snapshots/: openapi.json
apps/telegram-bot/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/telegram-bot/src/panelyt_bot/: __init__.py  api.py  cli.py  config.py  handlers.py
apps/telegram-bot/tests/: conftest.py  test_api.py  test_handlers.py
(+266 files in other folders)
