[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panelyt-api"
version = "0.1.0"
description = "Panelyt FastAPI service"
authors = [
  { name = "Panelyt" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "psycopg2-binary>=2.9",
  "asyncpg>=0.29",
  "alembic>=1.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "orjson>=3.9",
  "ortools>=9.10",
  "python-dateutil>=2.8",
  "tenacity>=8.2",
  "argon2-cffi>=23.1",
  "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-randomly>=3.15",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-cachetools",
  "types-python-dateutil",
  "aiosqlite>=0.19"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --randomly-seed=last"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["panelyt_api"]
branch = true
