[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panelyt-telegram-bot"
version = "0.1.0"
description = "Telegram bot that links chat IDs with Panelyt accounts and forwards alerts"
authors = [
  { name = "Panelyt" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[rate-limiter]>=21,<23",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "anyio>=4.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.scripts]
panelyt-telegram-bot = "panelyt_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["telegram.*"]
ignore_missing_imports = true
